--- a/era-backend/era-web/src/main/resources/config.properties
+++ b/era-backend/era-web/src/main/resources/config.properties
@@ -3,5 +3,5 @@ server.contextPath =
 jwt.header = Authorization
 jwt.secret = mySecret
 jwt.expiration = 604800
-jwt.route.authentication.path = auth
+jwt.route.authentication.path = api/login
 jwt.route.authentication.refresh = refresh
