--- a/era-common/pom.xml
+++ b/era-common/pom.xml
@@ -14,6 +14,10 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-		
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.8.4</version>
+		</dependency>
 	</dependencies>
 </project>
