--- a/era-backend/era-business/pom.xml
+++ b/era-backend/era-business/pom.xml
@@ -26,6 +26,17 @@
 		</dependency>
 
 		<!-- Security Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		
 		<!-- POI -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
