--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,21 @@
 	<name>ERA</name>
 	<description>ERA</description>
 	<packaging>pom</packaging>
-	
+
 	<modules>
 		<module>era-common</module>
 		<module>era-backend</module>
 	</modules>
-	
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
