--- a/era-backend/pom.xml
+++ b/era-backend/pom.xml
@@ -24,7 +24,7 @@
 			<artifactId>era-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-	
+
 		<!-- Apache common utils -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -68,6 +68,12 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${spring-data-jpa.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-framework.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
