--- a/era-backend/era-dal/pom.xml
+++ b/era-backend/era-dal/pom.xml
@@ -38,35 +38,35 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate-version}</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>${hibernate-version}</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-java8</artifactId>
-			<version>${hibernate-version}</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.googlecode.flyway</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>2.3.1</version>
+			<version>${flyway.version}</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
+			<version>${mysql.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			<version>2.0.1</version>
+			<version>${commons-dbcp2.version}</version>
 		</dependency>
 
 		<dependency>
@@ -78,6 +78,9 @@
 	</dependencies>
 
 	<properties>
-		<hibernate-version>5.2.3.Final</hibernate-version>
+		<flyway.version>2.3.1</flyway.version>
+		<commons-dbcp2.version>2.1.1</commons-dbcp2.version>
+		<hibernate.version>5.2.11.Final</hibernate.version>
+		<mysql.version>5.1.44</mysql.version>
 	</properties>	
 </project>
