--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,26 @@
 		<module>era-common</module>
 		<module>era-backend</module>
 	</modules>
+	
+	<properties>
+		<junit.version>4.12</junit.version>
+		<mockito.version>2.10.0</mockito.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
