--- a/era-backend/era-web/pom.xml
+++ b/era-backend/era-web/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<jjwt.version>0.7.0</jjwt.version>
+		<json-path.version>2.4.0</json-path.version>
 		<spring-mobile.version>1.1.5.RELEASE</spring-mobile.version>
 	</properties>
 
@@ -74,6 +75,25 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>${json-path.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path-assert</artifactId>
+			<version>${json-path.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
