--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,11 @@
 		<module>era-common</module>
 		<module>era-backend</module>
 	</modules>
-	
+
 	<properties>
 		<junit.version>4.12</junit.version>
-		<mockito.version>2.10.0</mockito.version>
+		<mockito.version>2.8.9</mockito.version>
+		<powermock.version>1.7.1</powermock.version>
 	</properties>
 
 	<dependencies>
@@ -32,7 +33,18 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
